samples/_failures_safe/1761701723_54c5b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8655fd88.c: In function ‘tokenize’:
./samples/SAFE/__tmp_8655fd88.c:162:9: error: expected expression at end of input
  162 |         tokens[token_count].column =
      |         ^~~~~~
./samples/SAFE/__tmp_8655fd88.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8655fd88.c:162:9: error: expected declaration or statement at end of input
